--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Quiz App</title>
+    <link rel="shortcut icon" href="./assets/quiz-logo.jpg" type="image/x-icon">
+    <title>Learn With Fun</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
